# Django

./: .gitignore  .python-version  README.md  db.sqlite3  fake_db.py  pyproject.toml
config/: settings.py  urls.py
templates/registration/: base.html  login.html  signup.html  verify_failed.html  verify_success.html
templates/todo/: base.html  pagination.html  todo_create.html  todo_form.html  todo_info.html  todo_list.html  todo_update.html
todo/: admin.py  cb_views.py  forms.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_initial.py  0002_todo_user.py  0003_comment.py  0004_todo_completed_image_todo_thumbnail.py
todo/templates/: todo_info.html  todo_list.html
users/: cb_views.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
utils/: email.py
